Testing github branch

--- a/TruConnectTestRevA/WebContent/WEB-INF/resources/config/config.properties
+++ b/TruConnectTestRevA/WebContent/WEB-INF/resources/config/config.properties
@@ -5,9 +5,9 @@ namespace=http://mvne.tscp.com/
 wsdl_localhost=http://localhost:8080/TSCPMVNE/TruConnectService?wsdl
 wsdl_development=http://USCAEL010-VM1:8080/TSCPMVNE/TruConnectService?wsdl
 wsdl_development_ip=http://10.10.30.188:8080/TSCPMVNE/TruConnectService?wsdl
-#wsdl_development_coupon=http://10.10.30.188:8080/TSCPMVNE_coupon/TruConnectService?wsdl
+wsdl_development_coupon=http://10.10.30.188:8080/TSCPMVNE_coupon/TruConnectService?wsdl
 #wsdl_development_coupon=http://10.10.30.188:8080/TSCPMVNE_dev_accountNo/TruConnectService?wsdl
 #wsdl_development_coupon=http://10.10.30.188:8080/TSCPMVNE_dev_swap/TruConnectService?wsdl
-wsdl_development_coupon=http://10.10.30.188:8080/TSCPMVNE_1.9.4/TruConnectService?wsdl
+#wsdl_development_coupon=http://10.10.30.188:8080/TSCPMVNE_1.9.4/TruConnectService?wsdl
 wsdl_production=http://USCAEL010-VM3:8080/TSCPMVNE/TruConnectService?wsdl
 wsdl_production_ip=http://10.10.30.190:8080/TSCPMVNE/TruConnectService?wsdl
